# sqlx-sqlite

./: .env  Cargo.toml  README.md
src/: main.rs
