[package]
name = "sqlx-sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }
native-tls = "0.2.11"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "sqlite", "macros"]}
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures = "0.3.26"
async-std = { version = "1.6.0", features = ["attributes"] }